Moved database stuff to seperate folder. Cleaned up a bit.

--- a/database/ExampleConnection.html
+++ b/database/ExampleConnection.html
@@ -1,8 +1,8 @@
 <?php
 
-namespace App\database;
+namespace Database;
 
-class ExampleDatabase
+class ExampleConnection
 {
     public $host = '';
 
